# simple-weather-bot

./: Dockerfile  Procfile  README.rst  docker_entrypoint.sh  pyproject.toml
.github/workflows/: release.yml
simple_weather_bot/: simple_weather_bot.py
