[tool.poetry]
name = "simple_weather_bot"
version = "0.1.0"
description = "Ask for weather in a specific locality"
authors = ["Daniele Tentoni <daniele.tentoni.1996@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "3.8.13"
aiogram = "^2.19"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
